--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Fun With Triangles/title>
 </head>
 <body>
-    <!-- <header>Fun With Triangles</header> -->
+    
 
     <h1>Angles of triangles</h1>
 
-    <label>Angle1</label>
+    <!-- <label>Angle1</label>
     <input for="Angle1" type="number"/>
 
-    <button>Is triangle ?</button>
+    <button>Is triangle ?</button> -->
 
 </body>
 </html>
