--- a/index.html
+++ b/index.html
@@ -4,17 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fun With Triangles/title>
+    <title>Fun With Triangles</title>
+    <link href=style.css rel="stylesheet" />
 </head>
 <body>
+    <main class="angles-triangles-main">
+<header>
+    <h1>Fun with Triangles</h1>
+
+   
+    <nav>
+        <a href="/">Is Triangle?</a>
+        <a href="../quiz.html">Quiz</a>
+        <a href="hypotenuse.html">Hypotenuse</a>
+        <a href="area.html">Area of Triangle</a>
+      </nav>
+    </header>
+    <h2> Angles of triangles</h2>
+<h3>enter three angles to check if it forms a triangle</h3>
+
+    <label for="Angle1"><p>Angle 1</p></label>
+    <input  type="number" class="angle-input"/>
+
     
+    <label for="Angle2"><p>Angle 2</p></label>
+    <input  type="number" class="angle-input"/>
 
-    <h1>Angles of triangles</h1>
+    <label for="Angle3" ><p>Angle 3</p></label>
+    <input type="number" class="angle-input"/>
+   
 
-    <!-- <label>Angle1</label>
-    <input for="Angle1" type="number"/>
+    <button id="is-triangle-btn">Is triangle ?</button>
 
-    <button>Is triangle ?</button> -->
+    <div id="output"></div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+    
+</main>
+
+<script src="app.js"></script>
 </body>
 </html>
