--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -37,6 +37,11 @@
 
 
 </main>
+
+<footer>    
+  <p>© | 2022 | shabashkhan</p>
+</footer>
+
     <script src="hypotenuse.js"></script>
 </body>
 </html>
