--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
     
 </main>
 
+<footer>    
+    <p>© | 2022 | shabashkhan</p>
+</footer>
+
+
 <script src="app.js"></script>
 </body>
 </html>
